# hermes

./: Cargo.toml  README.md  brun  build_run_brun.sh  compile.sh  main.sym  run  test_message.py
clsp/: p2_eip712_message.clsp  p2_eip712_message.clsp.hex
src/: driver.rs  main.rs
ui/: next.config.ts  package-lock.json  package.json
ui/app/: layout.tsx  page.tsx
