[package]
name = "chia-hermes"
version = "0.1.0"
edition = "2021"

[dependencies]
chia = "0.15.0"
k256 = { version = "0.13.4", features = ["ecdsa"] }
hex = "0.4.3"
chia-wallet-sdk = "0.18.0"

[patch.crates-io]
chia-wallet-sdk = { git = "https://github.com/xch-dev/chia-wallet-sdk", rev = "14a92994d00a4feeecba1aa18d3bb3055d961260" }
clvmr = { git = "https://github.com/Chia-Network/clvm_rs", rev = "ad539f504ade075262ac1754a9e0010c2789255f" }

[dev-dependencies]
anyhow = "1.0.86"
rstest = "0.22.0"
